[gd_scene load_steps=2 format=3 uid="uid://bkove5n4mte6i"]

[ext_resource type="Script" uid="uid://dyd8ii5vyp7dt" path="res://addons/nodescript/ui/type_picker_popup.gd" id="1"]

[node name="TypePickerPopup" type="AcceptDialog"]
oversampling_override = 1.0
size = Vector2i(360, 320)
exclusive = false
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 271.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Prompt" type="Label" parent="VBox"]
layout_mode = 2
text = "Select a type"
autowrap_mode = 2

[node name="TypeList" type="ItemList" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 2
item_count = 7
item_0/text = "bool"
item_1/text = "int"
item_2/text = "float"
item_3/text = "String"
item_4/text = "Variant"
item_5/text = "Object"
item_6/text = "Custom Class"

[node name="CustomClassContainer" type="HBoxContainer" parent="VBox"]
visible = false
layout_mode = 2

[node name="CustomClassLabel" type="Label" parent="VBox/CustomClassContainer"]
layout_mode = 2
text = "Custom Class"

[node name="CustomClassName" type="LineEdit" parent="VBox/CustomClassContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "MyCustomClass"

[node name="NameContainer" type="HBoxContainer" parent="VBox"]
visible = false
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBox/NameContainer"]
layout_mode = 2
text = "Name"

[node name="NameLine" type="LineEdit" parent="VBox/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Parameter name"
